<resources>
    <!--Labels activitys-->
    <string name="app_name">Easy word</string>
    <string name="new_word">Nova palavra</string>
    <string name="appConfiguraca">Configurações</string>
    <string name="estudando">Memorização em card</string>
    <string name="autenticar">Autenticação</string>
    <string name="atualizarDados">Alterando dados</string>
    <string name="sub_title">How to learn english word</string>
    <string name="action_settings">Settings</string>
    <string name="add_favorito">Adicionado aos favoritos</string>
    <string name="rem_favorito">Removido dos favoritos</string>
    <string name="searchview">Buscar...</string>
    <string name="proxima">Próxima</string>
    <string name="virar_card">Virar card</string>
    <string name="revisao_label">Revisão clássica</string>
    <string name="label_configuracao_aprendizagem">CONFIGURAÇÃO DE APRENDIZAGEM</string>
    <string name="label_itens_estudo">Itens por sessão de estudo</string>
    <string name="label_itens_revisao">Itens por sessão de revisão</string>
    <string name="label_lembrete">Lembrete</string>
    <string name="novoUsuario">Novo usuário</string>

    <string name="hint_nome">Nome</string>
    <string name="hint_email">Email</string>
    <string name="hint_senha">Senha</string>
    <string name="hint_name_palavra_ingles">Palavra em inglês</string>
    <string name="hint_name_palavra_traducao_um">Tradução</string>

    <string name="err_msg_name_palavra_ingles">Informe a palavra em inglês</string>
    <string name="err_msg_nome">preencha o campo nome</string>
    <string name="err_msg_palavra_traducao_um">informe a tradução</string>
    <string name="err_msg_email">entre com um email válido</string>
    <string name="err_msg_senha">entre com sua senha.</string>

    <!--Fragments-->
    <string name="frag_Inicial">PALAVRAS</string>
    <string name="frag_favoritos">FAVORITOS</string>
    <string name="frag_erradas">ERRADAS</string>

    <string name="btn_salvar">Gravar</string>
    <string name="btn_flip">Virar card</string>
    <string name="btn_logar">Entrar</string>
    <string name="btn_novo">Cadastrar</string>


    <!--Menu opções-->
    <string name="cadastrar">Criar nova palavra</string>
    <string name="praticar">Estudar</string>
    <string name="favoritos">Favoritos</string>
    <string name="meus_dados">Meus dados</string>
    <string name="revisao">Revisão</string>
    <string name="card_personalizado">Card personalizado</string>
    <string name="nao_estudar_mais">Não estudar mais</string>


    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_itens_sessao">
        <item >5</item>
        <item >10</item>
        <item >15</item>
        <item >20</item>
    </string-array>

    <!-- opcoes long press -->
    <string-array name="onlong_press_itens">
        <item >Já sei</item>
        <item >Adicionar ao card personalizado</item>
        <item >Alterar palavra</item>
    </string-array>


</resources>
