<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cadastrarUsuario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorCinzaClaro">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <android.support.design.widget.AppBarLayout
                android:id="@+id/app_bar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <include   android:id="@+id/toolbar" layout="@layout/toolbar" />
            </android.support.design.widget.AppBarLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/app_bar_layout"
                android:padding="10dp"
                android:background="@drawable/layout_radius">

                <!--nome-->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_name_usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edt_nome_actCadastrar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:hint="@string/hint_nome" />
                </android.support.design.widget.TextInputLayout>

                <!--email-->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtEmail_actCadastrar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:inputType="text"
                        android:hint="@string/hint_email" />
                </android.support.design.widget.TextInputLayout>


                <!--senha-->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_senha_actCadastrar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edtSenha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_senha" />
                </android.support.design.widget.TextInputLayout>


                <Button
                    android:id="@+id/btn_gravar"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_salvar"
                    android:background="@drawable/button_azul"
                    android:layout_marginTop="40dp"
                    android:textColor="@android:color/white"
                    android:textAllCaps="false"/>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>