<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipe_refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="2dp"
        android:layout_below="@+id/act_toolbar">

      <android.support.v4.widget.SwipeRefreshLayout
          android:id="@+id/refresh"
          android:layout_height="match_parent"
          android:layout_width="match_parent">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycleView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"/>
      </android.support.v4.widget.SwipeRefreshLayout>

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/float_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            fab:menu_labels_ellipsize="end"
            fab:menu_labels_singleLine="true">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fab:fab_size="mini"
                android:src="@drawable/ic_create_white_24dp"
                fab:fab_label="@string/cadastrar" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_style_white_24dp"
                fab:fab_size="mini"
                fab:fab_label="@string/praticar" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_account_box_white_24dp"
                fab:fab_size="mini"
                fab:fab_label="@string/revisao"/>

        </com.github.clans.fab.FloatingActionMenu>

    </RelativeLayout>


</RelativeLayout>