<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cinza_claro">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <include   android:id="@+id/toolbar" layout="@layout/toolbar" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/layout_radius"
        android:layout_below="@+id/appBarLayout"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:padding="15dp">

            <!--Email-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:hint="@string/hint_email" />
            </android.support.design.widget.TextInputLayout>

            <!--Senha-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_senha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/hint_senha"
                    android:password="true"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_logar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_logar"
                android:background="@drawable/button_azul"
                android:layout_marginTop="40dp"
                android:textColor="@android:color/white"
                android:textAllCaps="true"
                android:layout_marginBottom="10dp"
                android:layout_below="@+id/input_layout_senha"/>

    </LinearLayout>

</RelativeLayout>